<resources>
    <string name="app_name">Journal App</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone">Phone </string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="action_switch_auth">Don\'t have account? Sign up</string>
    <string name="action_switch_auth_login">Already have account? Sign in</string>
    <string name="or_text">-OR-</string>
    <string name="action_delete">Delete</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="more_message">More Message</string>
    <string name="error_password_to_short">paassword too short</string>
</resources>
