<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black"
    tools:context=".AddNewEvent">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="sans-serif-light"
        android:hint="@string/title"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <EditText
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="sans-serif-light"
        android:hint="@string/details"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:targetApi="jelly_bean" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="sans-serif-light"
        android:hint="@string/more_message"
        app:layout_constraintLeft_toLeftOf="@+id/details"
        app:layout_constraintTop_toBottomOf="@+id/details"
        tools:targetApi="jelly_bean" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />


</android.support.constraint.ConstraintLayout>